Tools/WikiNetParser_source/WikiNetParser/ProjectBase.Tools/Wiki/WikiParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:45:30 catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g 2011-05

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  ProjectBase.Tools.Wiki

{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:45:30")]
[System.CLSCompliant(false)]
public partial class WikiParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CODE_BEGIN", "CODE_END", "HTML_BEGIN", "HTML_END", "XML_BEGIN", "XML_END", "PRE_BEGIN", "PRE_END", "BQ_BEGIN", "BQ_END", "LI_ITEM", "LI_ITEM2", "LI_ITEM3", "NUM_ITEM", "NUM_ITEM2", "NUM_ITEM3", "LI_BEGIN", "LI_END", "NUM_BEGIN", "NUM_END", "NEWLINE", "WS", "COMMENT", "QUOTED", "LTSIGN", "SLASH", "LT", "GTSIGN", "GT", "ESCAPE", "A", "NAME", "IMG", "STYLES", "COLORS", "INLINE_BEGIN", "TABLE", "THEAD", "NOCONTROL", "CLOSE", "VLINE", "ATTR_TEXT", "ATTR_HEIGHT", "ATTR_WIDTH", "ATTR_FLOAT", "EXCLAM", "HASH", "PERCENT", "AMPR", "LEFT", "RIGHT", "ASTERIX", "DOT", "COLON", "SEMI", "EQUAL", "QUEST", "UNDER", "UNDERIN", "LCB", "RCB", "DIGIT", "UPPER", "LOWER", "NOTLEADING", "UNICODREST", "LETTER", "SYMBOLS", "CSHARP_BASE", "CSHARP_TYPES", "CSHARP_FLOW", "CSHARP_SPECIAL", "HTML_BASE", "IBTOKEN", "WORD", "BREAK", "ELEMENT", "NAME_ELEMENT", "A_ELEMENT", "IMG_ELEMENT", "TROW", "TCELL", "TH", "ATTR", "INLINE", "TAG", "LIST", "NUMERIC", "LISTITEM"
	};
	public const int EOF=-1;
	public const int CODE_BEGIN=4;
	public const int CODE_END=5;
	public const int HTML_BEGIN=6;
	public const int HTML_END=7;
	public const int XML_BEGIN=8;
	public const int XML_END=9;
	public const int PRE_BEGIN=10;
	public const int PRE_END=11;
	public const int BQ_BEGIN=12;
	public const int BQ_END=13;
	public const int LI_ITEM=14;
	public const int LI_ITEM2=15;
	public const int LI_ITEM3=16;
	public const int NUM_ITEM=17;
	public const int NUM_ITEM2=18;
	public const int NUM_ITEM3=19;
	public const int LI_BEGIN=20;
	public const int LI_END=21;
	public const int NUM_BEGIN=22;
	public const int NUM_END=23;
	public const int NEWLINE=24;
	public const int WS=25;
	public const int COMMENT=26;
	public const int QUOTED=27;
	public const int LTSIGN=28;
	public const int SLASH=29;
	public const int LT=30;
	public const int GTSIGN=31;
	public const int GT=32;
	public const int ESCAPE=33;
	public const int A=34;
	public const int NAME=35;
	public const int IMG=36;
	public const int STYLES=37;
	public const int COLORS=38;
	public const int INLINE_BEGIN=39;
	public const int TABLE=40;
	public const int THEAD=41;
	public const int NOCONTROL=42;
	public const int CLOSE=43;
	public const int VLINE=44;
	public const int ATTR_TEXT=45;
	public const int ATTR_HEIGHT=46;
	public const int ATTR_WIDTH=47;
	public const int ATTR_FLOAT=48;
	public const int EXCLAM=49;
	public const int HASH=50;
	public const int PERCENT=51;
	public const int AMPR=52;
	public const int LEFT=53;
	public const int RIGHT=54;
	public const int ASTERIX=55;
	public const int DOT=56;
	public const int COLON=57;
	public const int SEMI=58;
	public const int EQUAL=59;
	public const int QUEST=60;
	public const int UNDER=61;
	public const int UNDERIN=62;
	public const int LCB=63;
	public const int RCB=64;
	public const int DIGIT=65;
	public const int UPPER=66;
	public const int LOWER=67;
	public const int NOTLEADING=68;
	public const int UNICODREST=69;
	public const int LETTER=70;
	public const int SYMBOLS=71;
	public const int CSHARP_BASE=72;
	public const int CSHARP_TYPES=73;
	public const int CSHARP_FLOW=74;
	public const int CSHARP_SPECIAL=75;
	public const int HTML_BASE=76;
	public const int IBTOKEN=77;
	public const int WORD=78;
	public const int BREAK=79;
	public const int ELEMENT=80;
	public const int NAME_ELEMENT=81;
	public const int A_ELEMENT=82;
	public const int IMG_ELEMENT=83;
	public const int TROW=84;
	public const int TCELL=85;
	public const int TH=86;
	public const int ATTR=87;
	public const int INLINE=88;
	public const int TAG=89;
	public const int LIST=90;
	public const int NUMERIC=91;
	public const int LISTITEM=92;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public WikiParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public WikiParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return WikiParser.tokenNames; } }
	public override string GrammarFileName { get { return "catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class execute_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_execute();
	partial void Leave_execute();

	// $ANTLR start "execute"
	// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:18:1: execute : ( elements )* EOF ;
	[GrammarRule("execute")]
	private WikiParser.execute_return execute()
	{
		Enter_execute();
		EnterRule("execute", 1);
		TraceIn("execute", 1);
		WikiParser.execute_return retval = new WikiParser.execute_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken EOF2=null;
		WikiParser.elements_return elements1 = default(WikiParser.elements_return);

		object EOF2_tree=null;

		try { DebugEnterRule(GrammarFileName, "execute");
		DebugLocation(18, 28);
		try
		{
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:18:13: ( ( elements )* EOF )
			DebugEnterAlt(1);
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:18:15: ( elements )* EOF
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(18, 15);
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:18:15: ( elements )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				try
				{
					alt1 = dfa1.Predict(input);
				}
				catch (NoViableAltException nvae)
				{
					DebugRecognitionException(nvae);
					throw;
				}
				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:18:15: elements
					{
					DebugLocation(18, 15);
					PushFollow(Follow._elements_in_execute141);
					elements1=elements();
					PopFollow();

					adaptor.AddChild(root_0, elements1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(18, 28);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_execute144); 

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("execute", 1);
			LeaveRule("execute", 1);
			Leave_execute();
		}
		DebugLocation(18, 28);
		} finally { DebugExitRule(GrammarFileName, "execute"); }
		return retval;

	}
	// $ANTLR end "execute"

	public class elements_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_elements();
	partial void Leave_elements();

	// $ANTLR start "elements"
	// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:19:1: elements : ( table | blocks | lists | inlineBlock | emptyBlock )+ ;
	[GrammarRule("elements")]
	private WikiParser.elements_return elements()
	{
		Enter_elements();
		EnterRule("elements", 2);
		TraceIn("elements", 2);
		WikiParser.elements_return retval = new WikiParser.elements_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		WikiParser.table_return table3 = default(WikiParser.table_return);
		WikiParser.blocks_return blocks4 = default(WikiParser.blocks_return);
		WikiParser.lists_return lists5 = default(WikiParser.lists_return);
		WikiParser.inlineBlock_return inlineBlock6 = default(WikiParser.inlineBlock_return);
		WikiParser.emptyBlock_return emptyBlock7 = default(WikiParser.emptyBlock_return);


		try { DebugEnterRule(GrammarFileName, "elements");
		DebugLocation(19, 69);
		try
		{
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:19:13: ( ( table | blocks | lists | inlineBlock | emptyBlock )+ )
			DebugEnterAlt(1);
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:19:15: ( table | blocks | lists | inlineBlock | emptyBlock )+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(19, 15);
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:19:15: ( table | blocks | lists | inlineBlock | emptyBlock )+
			int cnt2=0;
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=6;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				try
				{
					alt2 = dfa2.Predict(input);
				}
				catch (NoViableAltException nvae)
				{
					DebugRecognitionException(nvae);
					throw;
				}
				} finally { DebugExitDecision(2); }
				switch (alt2)
				{
				case 1:
					DebugEnterAlt(1);
					// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:19:17: table
					{
					DebugLocation(19, 17);
					PushFollow(Follow._table_in_elements157);
					table3=table();
					PopFollow();

					adaptor.AddChild(root_0, table3.Tree);

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:19:25: blocks
					{
					DebugLocation(19, 25);
					PushFollow(Follow._blocks_in_elements161);
					blocks4=blocks();
					PopFollow();

					adaptor.AddChild(root_0, blocks4.Tree);

					}
					break;
				case 3:
					DebugEnterAlt(3);
					// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:19:34: lists
					{
					DebugLocation(19, 34);
					PushFollow(Follow._lists_in_elements165);
					lists5=lists();
					PopFollow();

					adaptor.AddChild(root_0, lists5.Tree);

					}
					break;
				case 4:
					DebugEnterAlt(4);
					// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:19:42: inlineBlock
					{
					DebugLocation(19, 42);
					PushFollow(Follow._inlineBlock_in_elements169);
					inlineBlock6=inlineBlock();
					PopFollow();

					adaptor.AddChild(root_0, inlineBlock6.Tree);

					}
					break;
				case 5:
					DebugEnterAlt(5);
					// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:19:56: emptyBlock
					{
					DebugLocation(19, 56);
					PushFollow(Follow._emptyBlock_in_elements173);
					emptyBlock7=emptyBlock();
					PopFollow();

					adaptor.AddChild(root_0, emptyBlock7.Tree);

					}
					break;

				default:
					if (cnt2 >= 1)
						goto loop2;

					EarlyExitException eee2 = new EarlyExitException( 2, input );
					DebugRecognitionException(eee2);
					throw eee2;
				}
				cnt2++;
			}
			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("elements", 2);
			LeaveRule("elements", 2);
			Leave_elements();
		}
		DebugLocation(19, 69);
		} finally { DebugExitRule(GrammarFileName, "elements"); }
		return retval;

	}
	// $ANTLR end "elements"

	public class inlineElements_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_inlineElements();
	partial void Leave_inlineElements();

	// $ANTLR start "inlineElements"
	// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:20:1: inlineElements : ( inline | atom | text )+ ;
	[GrammarRule("inlineElements")]
	private WikiParser.inlineElements_return inlineElements()
	{
		Enter_inlineElements();
		EnterRule("inlineElements", 3);
		TraceIn("inlineElements", 3);
		WikiParser.inlineElements_return retval = new WikiParser.inlineElements_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		WikiParser.inline_return inline8 = default(WikiParser.inline_return);
		WikiParser.atom_return atom9 = default(WikiParser.atom_return);
		WikiParser.text_return text10 = default(WikiParser.text_return);


		try { DebugEnterRule(GrammarFileName, "inlineElements");
		DebugLocation(20, 42);
		try
		{
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:20:15: ( ( inline | atom | text )+ )
			DebugEnterAlt(1);
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:20:17: ( inline | atom | text )+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(20, 17);
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:20:17: ( inline | atom | text )+
			int cnt3=0;
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=4;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				try
				{
					alt3 = dfa3.Predict(input);
				}
				catch (NoViableAltException nvae)
				{
					DebugRecognitionException(nvae);
					throw;
				}
				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:20:19: inline
					{
					DebugLocation(20, 19);
					PushFollow(Follow._inline_in_inlineElements185);
					inline8=inline();
					PopFollow();

					adaptor.AddChild(root_0, inline8.Tree);

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:20:28: atom
					{
					DebugLocation(20, 28);
					PushFollow(Follow._atom_in_inlineElements189);
					atom9=atom();
					PopFollow();

					adaptor.AddChild(root_0, atom9.Tree);

					}
					break;
				case 3:
					DebugEnterAlt(3);
					// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:20:35: text
					{
					DebugLocation(20, 35);
					PushFollow(Follow._text_in_inlineElements193);
					text10=text();
					PopFollow();

					adaptor.AddChild(root_0, text10.Tree);

					}
					break;

				default:
					if (cnt3 >= 1)
						goto loop3;

					EarlyExitException eee3 = new EarlyExitException( 3, input );
					DebugRecognitionException(eee3);
					throw eee3;
				}
				cnt3++;
			}
			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("inlineElements", 3);
			LeaveRule("inlineElements", 3);
			Leave_inlineElements();
		}
		DebugLocation(20, 42);
		} finally { DebugExitRule(GrammarFileName, "inlineElements"); }
		return retval;

	}
	// $ANTLR end "inlineElements"

	public class lists_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_lists();
	partial void Leave_lists();

	// $ANTLR start "lists"
	// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:21:1: lists : ( li | liLine | num | numLine );
	[GrammarRule("lists")]
	private WikiParser.lists_return lists()
	{
		Enter_lists();
		EnterRule("lists", 4);
		TraceIn("lists", 4);
		WikiParser.lists_return retval = new WikiParser.lists_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		WikiParser.li_return li11 = default(WikiParser.li_return);
		WikiParser.liLine_return liLine12 = default(WikiParser.liLine_return);
		WikiParser.num_return num13 = default(WikiParser.num_return);
		WikiParser.numLine_return numLine14 = default(WikiParser.numLine_return);


		try { DebugEnterRule(GrammarFileName, "lists");
		DebugLocation(21, 42);
		try
		{
			// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:21:13: ( li | liLine | num | numLine )
			int alt4=4;
			try { DebugEnterDecision(4, decisionCanBacktrack[4]);
			switch (input.LA(1))
			{
			case LI_BEGIN:
				{
				alt4=1;
				}
				break;
			case LI_ITEM:
				{
				alt4=2;
				}
				break;
			case NUM_BEGIN:
				{
				alt4=3;
				}
				break;
			case NUM_ITEM:
				{
				alt4=4;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 4, 0, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:21:15: li
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(21, 15);
				PushFollow(Follow._li_in_lists210);
				li11=li();
				PopFollow();

				adaptor.AddChild(root_0, li11.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:21:20: liLine
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(21, 20);
				PushFollow(Follow._liLine_in_lists214);
				liLine12=liLine();
				PopFollow();

				adaptor.AddChild(root_0, liLine12.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:21:29: num
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(21, 29);
				PushFollow(Follow._num_in_lists218);
				num13=num();
				PopFollow();

				adaptor.AddChild(root_0, num13.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:21:35: numLine
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(21, 35);
				PushFollow(Follow._numLine_in_lists222);
				numLine14=numLine();
				PopFollow();

				adaptor.AddChild(root_0, numLine14.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("lists", 4);
			LeaveRule("lists", 4);
			Leave_lists();
		}
		DebugLocation(21, 42);
		} finally { DebugExitRule(GrammarFileName, "lists"); }
		return retval;

	}
	// $ANTLR end "lists"

	public class atom_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_atom();
	partial void Leave_atom();

	// $ANTLR start "atom"
	// catarsa.com\\ProjectBase.Tools\\Wiki\\WikiParser.g:22:1: atom : ( anchor | anchorImg | name | image | tag | boldText | italicText | specialSigns | LT | GT );
	[GrammarRule("atom")]
	private WikiParser.atom_return atom()
	{
		Enter_atom();
		EnterRule("atom", 5);
		TraceIn("atom", 5);
		WikiParser.atom_return retval = new WikiParser.atom_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken LT23=null;
		IToken GT24=null;
		WikiParser.anchor_return anchor15 = default(WikiParser.anchor_return);
		WikiParser.anchorImg_return anchorImg16 = default(WikiParser.anchorImg_return);
		WikiParser.name_return name17 = default(WikiParser.name_return);
		WikiParser.image_return image18 = default(WikiParser.image_return);
		WikiParser.tag_return tag19 = default(WikiParser.tag_return);
		WikiParser.boldText_return boldText20 = default(WikiParser.boldText_return);
		WikiParser.italicText_return italicText21 = default(WikiParser.italicText_return);
